<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardCornerRadius="@dimen/_5sdp"
    app:cardBackgroundColor="@color/white"
    android:layout_marginStart="@dimen/_10sdp"
    android:layout_marginEnd="@dimen/_10sdp">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_5sdp"
        android:layout_marginBottom="@dimen/_5sdp">

        <LinearLayout
            android:id="@+id/ll_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical">

            <ImageView
                android:layout_width="@dimen/_30sdp"
                android:layout_height="@dimen/_30sdp"
                android:layout_marginStart="@dimen/_10sdp"
                android:src="@drawable/ic_info"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/are_you_sure_to_delete"
                android:layout_marginStart="@dimen/_10sdp"
                android:textColor="@color/grey"
                android:textStyle="bold"
                android:textSize="@dimen/_14ssp"/>

        </LinearLayout>

        <View
            android:id="@+id/view_line"
            android:layout_width="@dimen/_245sdp"
            android:layout_height="@dimen/_1sdp"
            android:background="@color/grey"
            android:layout_below="@+id/ll_txt"
            android:layout_marginTop="@dimen/_10sdp"/>

        <LinearLayout
            android:layout_width="@dimen/_245sdp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/view_line"
            android:layout_marginTop="@dimen/_5sdp">

            <Button
                android:id="@+id/btn_delete"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/delete"
                android:textStyle="bold"
                android:background="@android:color/transparent"
                android:layout_marginStart="@dimen/_3sdp"
                android:layout_marginEnd="@dimen/_5sdp"
                android:textColor="@color/netflix_red"/>

            <Button
                android:id="@+id/btn_cancel"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/cancel"
                android:textStyle="bold"
                android:background="@android:color/transparent"
                android:layout_marginStart="@dimen/_5sdp"
                android:layout_marginEnd="@dimen/_3sdp"
                android:textColor="@color/grey"/>

        </LinearLayout>

    </RelativeLayout>

</androidx.cardview.widget.CardView>