<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container_main"
    android:transitionName="container_trans"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LogInActivity"
    android:background="@color/dark_blue">

    <ImageView
        android:id="@+id/img_login"
        android:transitionName="img_trans"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_350sdp"
        android:layout_alignParentTop="true"
        android:src="@drawable/ic_login_signup_screen"/>

    <LinearLayout
        android:id="@+id/ll_main"
        android:transitionName="ll_main_trans"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_alignParentBottom="true"
        android:paddingTop="@dimen/_10sdp"
        android:paddingStart="@dimen/_10sdp"
        android:paddingEnd="@dimen/_10sdp"
        android:paddingBottom="@dimen/_10sdp"
        android:background="@drawable/doublesided_curve_bg">

        <TextView
            android:id="@+id/title_txt"
            android:transitionName="title_trans"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="@dimen/_10sdp"
            android:textSize="@dimen/_18ssp"
            android:textColor="@color/dark_blue"
            android:fontFamily="@font/poppins_black"
            android:textStyle="bold"
            android:textAllCaps="true"/>

        <LinearLayout
            android:id="@+id/ll_edittxt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginStart="@dimen/_15sdp"
            android:layout_marginEnd="@dimen/_15sdp">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/login_fname"
                android:transitionName="fname_trans"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/full_name"
                android:visibility="gone"
                app:hintTextColor="@color/dark_blue"
                app:boxStrokeColor="@color/dark_blue"
                android:textColorHint="@color/grey"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_marginBottom="@dimen/_10sdp">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textCursorDrawable="@drawable/pointer_icon"
                    android:inputType="text"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/login_mail"
                android:transitionName="email_trans"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email"
                app:hintTextColor="@color/dark_blue"
                app:boxStrokeColor="@color/dark_blue"
                android:textColorHint="@color/grey"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_marginBottom="@dimen/_10sdp">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textCursorDrawable="@drawable/pointer_icon"
                    android:inputType="textEmailAddress"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/login_phone"
                android:transitionName="phone_trans"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/phone"
                android:visibility="gone"
                app:hintTextColor="@color/dark_blue"
                app:boxStrokeColor="@color/dark_blue"
                android:textColorHint="@color/grey"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_marginBottom="@dimen/_10sdp">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textCursorDrawable="@drawable/pointer_icon"
                    android:inputType="textEmailAddress"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/login_passwrd"
                android:transitionName="passwrd_trans"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password"
                app:hintTextColor="@color/dark_blue"
                app:boxStrokeColor="@color/dark_blue"
                android:textColorHint="@color/grey"
                app:passwordToggleTint="@color/grey"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                app:passwordToggleEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textCursorDrawable="@drawable/pointer_icon"
                    android:inputType="textPassword"/>

            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="@dimen/_15sdp"
            android:layout_marginStart="@dimen/_15sdp"
            android:layout_marginEnd="@dimen/_15sdp"
            android:layout_marginBottom="@dimen/_10ssp">

            <Button
                android:id="@+id/btn_login"
                android:transitionName="btn_main_trans"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_40sdp"
                android:text="@string/login"
                android:layout_marginBottom="@dimen/_10sdp"
                android:textSize="@dimen/_14ssp"
                android:backgroundTint="@color/dark_blue"/>

            <Button
                android:id="@+id/btn_signup"
                android:transitionName="btn_txt_trans"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/signup_text"
                android:textSize="@dimen/_10ssp"
                android:layout_marginStart="@dimen/_20sdp"
                android:layout_marginEnd="@dimen/_20sdp"
                android:background="@android:color/transparent"
                android:textColor="@color/dark_blue"/>

        </LinearLayout>

    </LinearLayout>

</RelativeLayout>