<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="@dimen/_380sdp"
    android:id="@+id/container_popup"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@android:color/transparent"
    android:gravity="center"
    android:layout_margin="@dimen/_10sdp"
    app:cardBackgroundColor="@color/white"
    app:cardCornerRadius="@dimen/_10sdp"
    app:cardPreventCornerOverlap="false">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/_380sdp"
        android:gravity="center">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/dialog_profile_img"
            android:layout_width="@dimen/_65sdp"
            android:layout_height="@dimen/_65sdp"
            android:src="@color/white"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/_8sdp"
            android:scaleType="centerCrop"
            app:civ_border_width="@dimen/_2sdp"
            app:civ_border_color="@color/white"
            android:layout_marginStart="@dimen/_10sdp"
            android:layout_marginEnd="@dimen/_5sdp"
            android:layout_marginBottom="@dimen/_10sdp"/>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/dialog_mail"
            android:transitionName="email_trans"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@+id/dialog_fname"
            android:layout_marginStart="@dimen/_5sdp"
            android:layout_marginEnd="@dimen/_5sdp"
            android:hint="@string/email"
            android:focusable="true"
            app:hintTextColor="@color/dark_blue"
            app:boxStrokeColor="@color/dark_blue"
            android:textColorHint="@color/grey"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_marginBottom="@dimen/_10sdp">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:editable="false"
                android:textCursorDrawable="@drawable/pointer_icon"
                android:inputType="textEmailAddress"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/dialog_fname"
            android:transitionName="fname_trans"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/full_name"
            android:focusable="true"
            app:hintTextColor="@color/dark_blue"
            android:layout_above="@+id/dialog_phone"
            android:layout_marginStart="@dimen/_5sdp"
            android:layout_marginEnd="@dimen/_5sdp"
            app:boxStrokeColor="@color/dark_blue"
            android:textColorHint="@color/grey"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_marginBottom="@dimen/_10sdp">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:editable="false"
                android:textCursorDrawable="@drawable/pointer_icon"
                android:inputType="text|textCapWords"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/dialog_phone"
            android:transitionName="phone_trans"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@+id/dialog_passwrd"
            android:layout_marginStart="@dimen/_5sdp"
            android:layout_marginEnd="@dimen/_5sdp"
            android:hint="@string/phone"
            android:focusable="true"
            app:hintTextColor="@color/dark_blue"
            app:boxStrokeColor="@color/dark_blue"
            android:textColorHint="@color/grey"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_marginBottom="@dimen/_10sdp">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:editable="false"
                android:textCursorDrawable="@drawable/pointer_icon"
                android:inputType="number"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/dialog_passwrd"
            android:transitionName="fname_trans"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:focusable="true"
            app:hintTextColor="@color/dark_blue"
            android:layout_above="@+id/ll_container_btn"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_marginStart="@dimen/_5sdp"
            android:layout_marginEnd="@dimen/_5sdp"
            app:boxStrokeColor="@color/dark_blue"
            android:textColorHint="@color/grey"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_marginBottom="@dimen/_10sdp">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:editable="false"
                android:textCursorDrawable="@drawable/pointer_icon"
                android:inputType="text|textCapWords"/>

        </com.google.android.material.textfield.TextInputLayout>

        <LinearLayout
            android:id="@+id/ll_container_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_alignParentBottom="true">

            <Button
                android:id="@+id/btn_close"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:backgroundTint="@color/dark_blue"
                android:textColor="@color/white"
                android:text="@string/close"
                android:textStyle="bold"
                android:layout_marginStart="@dimen/_40sdp"
                android:layout_marginEnd="@dimen/_40sdp"/>

        </LinearLayout>

    </RelativeLayout>

</androidx.cardview.widget.CardView>